# telebot-feedback

./: .env  Dockerfile  README.MD  docker-compose.yml  pyproject.toml  requirements.txt
bot/: main.py
db/: database.py  models.py
